[package]
name = "liburcu-sys"
version = "0.0.1"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Will-Shanks/rcu"
description = "rust ffi bindings for liburcu"
keywords = ["rcu", "ffi"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
bindgen = "0.69"
