[package]
name = "rcu"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Will-Shanks/rcu"
description = "rust rcu library"
keywords = ["rcu"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atomic-wait = "1"
log = "0.4"

[dev-dependencies]
env_logger = "0.11"
